# paragliding-tools

./: .gitignore  ATTRIBUTION.md  CITATION.cff  LICENSE  NOTICE  README.md  analyze.py  flightday.py  hires_forecast.py  mkdocs.yml  pyproject.toml  thermal.py  thermik.py
.claude/: settings.json
.claude/hooks/: mirror_memory.py
.github/workflows/: docs.yml
docs/: README.md  background.de.md  background.md  examples.de.md  examples.md  index.de.md  index.md  payerne.de.md  payerne.md  terrain-clearance.de.md  terrain-clearance.md  terrainclearance.md  thermal-step-by-step.de.md  thermal-step-by-step.md  thermalmodel-journal.md  wolkenabstaende-flowchart.md
examples/: README.md
examples/data/: domain_frutigen_wide.kml  domain_niesen_frutigen.kml
meteo/: README.md  forecast_sounding.py  radiosonde_payerne.py  synoptic.py  synoptic_plots.py
source/: ch.swisstopo.swisssurface3d-raster-DrWY4rHC.csv  ch.swisstopo.swisssurface3d-raster-ESCoU5T1.csv
src/terrainclearance/: __init__.py  calibrate.py  cli.py  config.py  critical.py  distribution.py  geo.py  igc_loader.py  pipeline.py  report.py  stac.py  terrain.py  tiles.py  uncertainty.py
src/thermalmodel/: README.md  __init__.py  boundarylayer.py  buoyancy.py  cli.py  config.py  daytimeline.py  domain.py  grids.py  heating.py  horizon.py  hotspots.py  irradiance.py  landcover.py  nwp.py  nwp_historical.py  pipeline.py  plotstyle.py  viz.py  (+9 more)
tests/: test_calibrate.py  test_distribution.py  test_igc_loader.py  test_report.py  test_stac.py  test_synoptic.py  test_terrain.py  test_thermalmodel.py  test_uncertainty.py
(+18 files in other folders)
